feat: fixed for h-cases
