# internal/handler/adm_handler.go
@@ -5,6 +5,7 @@ import (
 	"Blogs/internal/handler/http"
 	"github.com/gin-gonic/gin"
 	"go.mongodb.org/mongo-driver/bson/primitive"
+	"strings"
 )
 
 // createUser godoc
@@ -17,36 +18,36 @@ import (
 // @Produce 		json
 // @Param 			input body Blogs.CreateUserRequest true "account info"
 // @Success 		200 {object} http.Response ""
-// @Failure 		400,404 {object} http.Response
-// @Failure			500 {object} http.Response
-// @Failure 		default {object} http.Response
+// @Failure 		400,404 {object} http.ErrorResponse
+// @Failure			500 {object} http.ErrorResponse
+// @Failure 		default {object} http.ErrorResponse
 // @Router 			/admin/users [post]
 func (h *Handler) createUser(c *gin.Context) {
 	var input Blogs.CreateUserRequest
 	if err := c.BindJSON(&input); err != nil {
-		http.HandleResponse(c, http.BadRequest, err.Error())
+		http.HandleErrorResponse(c, http.BadRequest, err.Error())
 		return
 	}
 	signUpData := Blogs.UserModel{
 		Role:      input.Role,
 		FirstName: input.FirstName,
 		LastName:  input.LastName,
-		Username:  input.Username,
+		Username:  strings.ToLower(input.Username),
 		Password:  input.Password,
-		Email:     input.Email,
+		Email:     strings.ToLower(input.Email),
 		Bio:       input.Bio,
 	}
 	id, err := h.services.CreateUser(signUpData)
 	if err != nil {
 		if err.Error() == "already registered" {
-			http.HandleResponse(c, http.RequestConflict, err.Error())
+			http.HandleErrorResponse(c, http.RequestConflict, err.Error())
 			return
 		}
 		if err.Error() == "username exists" {
-			http.HandleResponse(c, http.RequestConflict, err.Error())
+			http.HandleErrorResponse(c, http.RequestConflict, err.Error())
 			return
 		}
-		http.HandleResponse(c, http.InternalServerError, err.Error())
+		http.HandleErrorResponse(c, http.InternalServerError, err.Error())
 		return
 	}
 
@@ -64,14 +65,14 @@ func (h *Handler) createUser(c *gin.Context) {
 // @Accept 				json
 // @Produce 			json
 // @Success 			200 {object} http.Response
-// @Failure 			400,404 {object} http.Response
-// @Failure				500 {object} http.Response
-// @Failure 			default {object} http.Response
+// @Failure 			400,404 {object} http.ErrorResponse
+// @Failure				500 {object} http.ErrorResponse
+// @Failure 			default {object} http.ErrorResponse
 // @Router 				/admin/users [get]
 func (h *Handler) getAllUsers(c *gin.Context) {
 	users, err := h.services.GetAllUsers()
 	if err != nil {
-		http.HandleResponse(c, http.InternalServerError, err.Error())
+		http.HandleErrorResponse(c, http.InternalServerError, err.Error())
 		return
 	}
 	http.HandleResponse(c, http.OK, users)
@@ -87,24 +88,24 @@ func (h *Handler) getAllUsers(c *gin.Context) {
 // @Produce 			json
 // @Param 				users_id path string true "User ID"
 // @Success 			200 {object} http.Response
-// @Failure 			400,404 {object} http.Response
-// @Failure				500 {object} http.Response
-// @Failure 			default {object} http.Response
+// @Failure 			400,404 {object} http.ErrorResponse
+// @Failure				500 {object} http.ErrorResponse
+// @Failure 			default {object} http.ErrorResponse
 // @Router 				/admin/users/{users_id} [get]
 func (h *Handler) getUserById(c *gin.Context) {
 	userId, err := primitive.ObjectIDFromHex(c.Param("users_id"))
 	if err != nil {
-		http.HandleResponse(c, http.BadRequest, err.Error())
+		http.HandleErrorResponse(c, http.BadRequest, err.Error())
 		return
 	}
 
 	user, err := h.services.GetUserById(userId)
 	if err != nil {
 		if err.Error() == "no matching user" {
-			http.HandleResponse(c, http.NotFound, err.Error())
+			http.HandleErrorResponse(c, http.NotFound, err.Error())
 			return
 		}
-		http.HandleResponse(c, http.InternalServerError, err.Error())
+		http.HandleErrorResponse(c, http.InternalServerError, err.Error())
 		return
 	}
 
@@ -122,26 +123,29 @@ func (h *Handler) getUserById(c *gin.Context) {
 // @Param 				users_id path string true "User ID"
 // @Param 				new_input body Blogs.UpdateUserRequest true "new user info"
 // @Success 			200 {object} http.Response
-// @Failure 			400,404 {object} http.Response
-// @Failure				500 {object} http.Response
-// @Failure 			default {object} http.Response
+// @Failure 			400,404 {object} http.ErrorResponse
+// @Failure				500 {object} http.ErrorResponse
+// @Failure 			default {object} http.ErrorResponse
 // @Router 				/admin/users/{users_id} [put]
 func (h *Handler) updateUser(c *gin.Context) {
 	userId, err := primitive.ObjectIDFromHex(c.Param("users_id"))
 	if err != nil {
-		http.HandleResponse(c, http.BadRequest, err.Error())
+		http.HandleErrorResponse(c, http.BadRequest, err.Error())
 		return
 	}
 
 	var input Blogs.UpdateUserRequest
 	if err := c.BindJSON(&input); err != nil {
-		http.HandleResponse(c, http.BadRequest, err.Error())
+		http.HandleErrorResponse(c, http.BadRequest, err.Error())
 		return
 	}
 
+	*input.Username = strings.ToLower(*input.Username)
+	*input.Email = strings.ToLower(*input.Email)
+
 	err = h.services.UpdateUser(userId, input)
 	if err != nil {
-		http.HandleResponse(c, http.InternalServerError, err.Error())
+		http.HandleErrorResponse(c, http.InternalServerError, err.Error())
 		return
 	}
 
@@ -158,20 +162,20 @@ func (h *Handler) updateUser(c *gin.Context) {
 // @Produce 			json
 // @Param 				users_id path string true "User ID"
 // @Success 			200 {object} http.Response
-// @Failure 			400,404 {object} http.Response
-// @Failure				500 {object} http.Response
-// @Failure 			default {object} http.Response
+// @Failure 			400,404 {object} http.ErrorResponse
+// @Failure				500 {object} http.ErrorResponse
+// @Failure 			default {object} http.ErrorResponse
 // @Router 				/admin/users/{users_id} [delete]
 func (h *Handler) deleteUser(c *gin.Context) {
 	userId, err := primitive.ObjectIDFromHex(c.Param("users_id"))
 	if err != nil {
-		http.HandleResponse(c, http.BadRequest, err.Error())
+		http.HandleErrorResponse(c, http.BadRequest, err.Error())
 		return
 	}
 
 	err = h.services.DeleteUser(userId)
 	if err != nil {
-		http.HandleResponse(c, http.InternalServerError, err.Error())
+		http.HandleErrorResponse(c, http.InternalServerError, err.Error())
 		return
 	}
 
